Replaced refs to Propulsion with ETH

--- a/backend/app/emails/templates/mail_base.html
+++ b/backend/app/emails/templates/mail_base.html
@@ -565,7 +565,7 @@ Sizes: [
                                                     <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                         <tr>
                                                             <td valign="top" class="imageContent">
-                                                                <img src="{% block logo %}{{logo_url}}/logo.png{% endblock %}" width="250" class="flexibleImage" style="max-width:250px;width:100%;display:block;" alt="Propulsion Academy" title="Momentum"/>
+                                                                <img src="{% block logo %}{{logo_url}}/logo.png{% endblock %}" width="250" class="flexibleImage" style="max-width:250px;width:100%;display:block;" alt="ETH Zürich" title="Lepi"/>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -671,7 +671,7 @@ Sizes: [
 
                                                                 <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:#828282;text-align:center;line-height:120%;">
                                                                     <div>Copyright &#169; {% now "Y" %}
-                                                                        <a href="https://propulsion.academy/" target="_blank" style="text-decoration:none;color:#828282;"><span style="color:#828282;">Propulsion Academy AG</span></a>. All&nbsp;rights&nbsp;reserved.
+                                                                        <a href="https://www.librarylab.ethz.ch/" target="_blank" style="text-decoration:none;color:#828282;"><span style="color:#828282;">ETH Library Lab</span></a>. All&nbsp;rights&nbsp;reserved.
                                                                     </div>
                                                                 </div>
 
